# claims_processing

./: .env.example  .gitignore  CLAUDE.md  README.md  demagog_wypowiedzi_general.json  json_file_check.py  loader.py  nb_cells_tmp.txt  pyproject.toml  pyrightconfig.json  requirements.txt  test_eval_local_out.db-shm  test_eval_local_out.db-wal
agents/: gemini_a_1.py
agents_dem/: __init__.py  bm25_claim_decomp.py  fewshot_cot_debate_rag.py  fewshot_cot_rag.py  gemini_dem_1.py  gemini_dem_2.py  prompts.py  rag_claim_decomp.py  single.py  single_bm25.py  single_web.py
agents_uam/: __init__.py  bm25_claim_decomp.py  fewshot_cot_debate_rag.py  fewshot_cot_rag.py  gemini_uam_1.py  gemini_uam_2.py  rag_claim_decomp.py  single.py  single_bm25.py  single_web.py  zero_shot1.py  zero_shot2.py
claims_processing.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
data/: am_benchmark_loader.py
data_analysis/: data_discovery.ipynb  model_evaluation_analysis.ipynb
dataprep/: __init__.py  am_benchmark_db.py  build_wikipedia_db.py  demagog_db.py  wikipedia_db.py  wikipedia_embedding.py
datascrap/: __init__.py  demagog_det_webscrapper.py  demagog_webscrapper.py  polish_wikipedia_webscrapper.py
docs/: architecture.md  data_pipeline.md  results_db.md  running_evaluations.md
eval/: __init__.py  base_agent.py  eval_loop.py  uam_benchmark_loop.py
examples/: .env.example
extras/: README.md
extras/demagog/: demagog_db.py  (+2 more)
gen_agent/: base_agent.py  bm25.py  llm_client.py  rag.py  react.py
local_builder/: benchmark.py  setup_ollama.py
monitoring/: __init__.py  monitor.py
notebooks/: benchmark_category_histograms.ipynb  data_discovery.ipynb  model_evaluation_analysis.ipynb
scripts/: analyze_results.py  backup_dbs.py  build_am_benchmark_subset.py  build_subsample_results_db.py  fix_corrupted_results.py  run_eval_am_benchmark.py  run_eval_demagog.py  schedule_backup.py
tests/: eval_completeness_test.py  test_01_wikipedia_db.py  test_02_demagog_db.py  test_03_am_benchmark_db.py  test_04_eval_local.py  test_05_eval_cloud.py  test_06_cuda_gpu.py  test_07_monitoring.py  test_08_crash_recovery.py  test_09_bm25_polish.py  test_10_monitoring_progress.py  test_10b_bm25_cache.py  test_11_am_agent_config.py  tester.py
tools/: backup_dbs.py  build_am_benchmark_subset.py  build_subsample_results_db.py  schedule_backup.py
(+43 files in other folders)
