[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "claims_processing"
version = "0.1.0"
description = "Claims Processing project"

[tool.setuptools.packages.find]
where = ["."]
include = ["local_builder*", "agents_dem*", "agents_uam*", "dataprep*", "datascrap*", "eval*", "gen_agent*", "monitoring*", "scripts*", "data*"]

[tool.pyrefly]
project_includes = ["."]
project_excludes = [".venv", "claims_processing.egg-info", "data", "results"]
replace_imports_with_any = ["torch", "torchvision", "torchaudio", "transformers", "sentence_transformers", "huggingface_hub", "tokenizers", "safetensors", "accelerate", "datasets"]

[tool.pyright]
include = ["."]
executionEnvironments = [
  { root = "." }
]
venvPath = "."
venv = ".venv"
extraPaths = ["."]
