[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "claims_processing"
version = "0.1.0"
description = "Polish-language claim verification / fact-checking benchmark framework"
requires-python = ">=3.10"

[project.scripts]
run-am-eval = "claims_processing.cli.run_eval_am_benchmark:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["claims_processing*"]

[tool.pyrefly]
project_includes = ["src", "tests", "tools"]
project_excludes = [".venv", "claims_processing.egg-info", "data", "results", "extras"]
replace_imports_with_any = ["torch", "torchvision", "torchaudio", "transformers", "sentence_transformers", "huggingface_hub", "tokenizers", "safetensors", "accelerate", "datasets"]

[tool.pyright]
include = ["src", "tests", "tools"]
executionEnvironments = [
  { root = "src" }
]
venvPath = "."
venv = ".venv"
extraPaths = ["src"]
